--- a/src/components/ChatWindow/ChatWindow.css
+++ b/src/components/ChatWindow/ChatWindow.css
@@ -1,7 +1,7 @@
 #ChatWindow__container {
   background-color: #fff;
   border-radius: 3px;
-  width: calc(100% - 40px);
+  width: 1000px;
   height: calc(100% - 40px);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.2);
   display: flex;
