--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,14 +3,15 @@ body {
   padding: 0;
   font-family: sans-serif;
   background-color: #f2f2f2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 800px;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 #App__container {
   height: 780px;
-  width: 1420px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+  padding: 30px;
+  min-width: 1000px;
 }
